PanelEmpleado con imagen, ya quedo:)